--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
 set(CXX_STANDARD 23)
 set(CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -m64")
+
+if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi /Wall")
+else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -m64")
+endif()
+
 
 # Comment out this line if you're using default triplet for vcpkg
-set(VCPKG_TARGET_TRIPLET x64-mingw-dynamic)
+# set(VCPKG_TARGET_TRIPLET x64-mingw-dynamic)
 
 project(learning-sdl2 VERSION 1.0)
 
@@ -17,7 +23,6 @@ target_include_directories(main PRIVATE "include/")
 find_package(SDL2 CONFIG REQUIRED)
 find_package(SDL2_image CONFIG REQUIRED)
 
-target_link_libraries(main PRIVATE mingw32)
 target_link_libraries(main
     PRIVATE
     $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
