--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 set(CXX_STANDARD 23)
 set(CXX_STANDARD_REQUIRED ON)
-
-if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi /Wall /Qspectre")
-else()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -m64")
-endif()
+string(TOLOWER "${CMAKE_CXX_COMPILER_ID}" COMPILER_ID)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi /Wall")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -m64")
 
 # Comment out this line if you're using default triplet for vcpkg
 # set(VCPKG_TARGET_TRIPLET x64-mingw-dynamic)
