--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 set(CXX_STANDARD 20)
 set(CXX_STANDARD_REQUIRED ON)
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -m64")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -m64")
 
 # Comment out this line if you're using default triplet for vcpkg
-# set(VCPKG_TARGET_TRIPLET x64-mingw-dynamic)
+set(VCPKG_TARGET_TRIPLET x64-mingw-dynamic)
 
 project(learning-sdl2 VERSION 1.0)
 
@@ -21,5 +21,5 @@ target_link_libraries(main
     PRIVATE
     $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
     $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
-)
+    )
 target_link_libraries(main PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
