--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 set(CXX_STANDARD 20)
 set(CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake"
+  CACHE STRING "Vcpkg toolchain file")
+
 project(learning-sdl2 VERSION 0.1)
 
 find_package(SDL2 CONFIG REQUIRED)
