feat(cmake): check for mingw compiler to set specific linker flags and variables to make sure project compiles with mingw

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,22 @@ set(CXX_STANDARD_REQUIRED ON)
 set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake"
   CACHE STRING "Vcpkg toolchain file")
 
+# Fix MinGW / MSYS build
+if(WIN32)
+  if(NOT MSVC)
+    set(VCPKG_TARGET_TRIPLET x64-mingw-dynamic)
+  endif()
+endif()
+
 project(learning-sdl2 VERSION 0.1)
-
-find_package(SDL2 CONFIG REQUIRED)
-find_package(SDL2_image CONFIG REQUIRED)
-
 file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS "src/*.cpp")
 
 add_executable(main ${SRC_FILES})
 
 target_include_directories(main PRIVATE "include/")
+
+find_package(SDL2 CONFIG REQUIRED)
+find_package(SDL2_image CONFIG REQUIRED)
 
 target_link_libraries(main
     PRIVATE
@@ -22,3 +28,10 @@ target_link_libraries(main
     $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
 )
 target_link_libraries(main PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
+
+# Fix MinGW / MSYS build
+if(WIN32)
+  if(NOT MSVC)
+    target_link_libraries(main PRIVATE mingw32)
+  endif()
+endif()
