feat(game): use ritTimer library to count frameTime
include the ritTimer as a submodule in vendor/ folder

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vcpkg"]
 	path = vcpkg
 	url = https://github.com/Microsoft/vcpkg.git
+[submodule "vendor/ritTimer"]
+	path = vendor/ritTimer
+	url = https://github.com/ritchielrez/ritTimer
